# OpenPHIGS

./: CHANGELOG  Contributors.txt  Makefile  README.md  phigs.def
.github/workflows/: codeql.yml  darwin.yml  makefile.yml  ubuntu.yml
include/phigs/: alloc.h  err.h  errnum.h  phg.h  phg_dt.h  phgretdata.h  ws_inp.h  ws_type.h
include/phigs/private/: arP.h  cbP.h  cssP.h  cvsP.h  errP.h  evtP.h  fasd3P.h  hdlP.h  sofas3P.h  wsbP.h
include/phigs/util/: ftn.h  mat.h  stk.h
share/doc/: LICENSE
src/: CMakeLists.txt
src/cmake/: FindGLEW.cmake  FindXMU.cmake  Findepoxy.cmake
src/include/: CMakeLists.txt
src/include/phigs/: CMakeLists.txt  ar.h  attr.h  cp.h  css.h  err.h  phconf.h  phgargs.h  phgtype.h  phigs.h  phigsf77.h  phigsfunc.h  psl.h  sin.h  util.h  ws.h  ws_inp.h  ws_type.h
src/include/phigs/private/: CMakeLists.txt  phgP.h  sinP.h  sinqP.h  wsbP.h  wsglP.h  wsxP.h
src/include/phigs/util/: CMakeLists.txt  conv.h  ftn.h  htab.h  list.h  node.h  nset.h
src/libphigs/: CMakeLists.txt  ar.c  ar_hier.c  cb_ar.c  cb_el.c  cb_extel.c  cb_inp.c  cb_phg.c  cb_tr.c  cb_wst.c  css_ini.c  css_inq.c  css_set.c  css_stb.c  css_str.c  css_ws.c  err_num.c  fb_phg.c  fb_str.c  fnt.c  fnt_mroman.c  phg.c  sin.c  sin_cho.c  sin_evt.c  sin_str.c  sin_ws.c  sinq.c  sofas3.c  ut.c  ut_conv.c  ut_htab.c  ut_list.c  ws_inp.c  wsb_lut.c  wsgl.c  wsgl_attr.c  wsgl_edge.c  wsgl_extattr.c  wsgl_fasd3edge.c  (+6 more)
src/libphigs/archive/: ar_conv.c  ar_ops.c
src/libphigs/c_binding/: cb.c  cb_ar.c  cb_conf.c  cb_el.c  cb_extel.c  cb_inp.c  cb_lite.c  cb_pgse.c  cb_phg.c  cb_str.c  cb_text.c  cb_tr.c  cb_ws.c  cb_wst.c
src/libphigs/conf/: ophconf.c
src/libphigs/cp/: cpm_tlkt.c
src/libphigs/css/: css_el.c  css_ini.c  css_pr.c  css_ws.c
src/libphigs/errors/: err.c  err_num.c
src/libphigs/f_binding/: fb_ar.c  fb_conf.c  fb_el.c  fb_extel.c  fb_inp.c  fb_pgse.c  fb_phg.c  fb_str.c  fb_text.c  fb_tr.c  fb_ws.c  fb_wst.c
src/libphigs/fonts/: fnt_roman.c
src/libphigs/input/: sin.c  sin_cho.c  sin_cvs.c  sin_dev.c  sin_evt.c  sin_str.c  sin_val.c  sin_ws.c  sinq.c
src/libphigs/phg/: phg.c  phg_attr.c  phg_swap.c
src/libphigs/ut/: ut_htab.c  ut_mat.c  ut_nset.c  ut_stk.c
src/libphigs/utils/: fasd3.c  hdl.c  psl.c
src/libphigs/ws/: ws_inp.c  ws_pm.c  wsb.c  wsb_lut.c  wst.c  wstx_ini.c  wsx.c  wsx_inp.c  wsx_util.c
src/libphigs/wsgl/: wsgl.c  wsgl_attr.c  wsgl_clear.c  wsgl_edge.c  wsgl_extattr.c  wsgl_fasd3clear.c  wsgl_fasd3edge.c  wsgl_fasd3fill.c  wsgl_fasdclear.c  wsgl_fasdfill.c  wsgl_fasedge.c  wsgl_fill.c  wsgl_light.c  wsgl_line.c  wsgl_marker.c  wsgl_obj.c  wsgl_shaders.c  wsgl_sofas3clear.c  wsgl_sofas3edge.c  wsgl_sofas3fill.c  wsgl_text.c
src/test_c/: CMakeLists.txt  eldata.c  eldata.h  test_c1.c  test_c10.c  test_c2.c  test_c3.c  test_c4.c  test_c5.c  test_c6.c  test_c7.c  test_c8.c  test_c9.c
src/test_f/: CMakeLists.txt  test_f1.f  test_f10.f  test_f11.f  test_f12.f  test_f13.f  test_f2.f  test_f3.f  test_f4.f  test_f5.f  test_f6.f  test_f7.f  test_f8.f  test_f9.f
src/tools/: CMakeLists.txt  ardisplay.c  glm.c  objdisplay.c
