ENABLE_LANGUAGE(Fortran)

ADD_EXECUTABLE(test_f1 test_f1.f)
TARGET_LINK_LIBRARIES(test_f1 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f2 test_f2.f)
TARGET_LINK_LIBRARIES(test_f2 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f3 test_f3.f)
TARGET_LINK_LIBRARIES(test_f3 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f4 test_f4.f)
TARGET_LINK_LIBRARIES(test_f4 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f5 test_f5.f)
TARGET_LINK_LIBRARIES(test_f5 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f6 test_f6.f)
TARGET_LINK_LIBRARIES(test_f6 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f7 test_f7.f)
TARGET_LINK_LIBRARIES(test_f7 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f8 test_f8.f)
TARGET_LINK_LIBRARIES(test_f8 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f9 test_f9.f)
TARGET_LINK_LIBRARIES(test_f9 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f10 test_f10.f)
TARGET_LINK_LIBRARIES(test_f10 ${PHIGS_LIBRARIES})
ADD_EXECUTABLE(test_f11 test_f11.f)
TARGET_LINK_LIBRARIES(test_f11 ${PHIGS_LIBRARIES})

INSTALL(TARGETS
  test_f1
  test_f2
  test_f3
  test_f4
  test_f5
  test_f6
  test_f7
  test_f8
  test_f9
  test_f10
  test_f11
  DESTINATION
    tests_f
)
